voyagesms/templates/deployment.yaml
---
# Source: voyagesms/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "voyagesms-deployment"
  labels:
    chart: 'voyagesms-1.0.0'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: "voyagesms-selector"
        version: "current"
    spec:
      serviceAccountName: kcontainer-runtime
      containers:
      - name: "voyagesms"
        image: "ibmcase/kcontainer-voyages-ms:0.1.16"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 3000
          periodSeconds: 1000
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
