voyagesms/templates/route.yaml
---
# Source: voyagesms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-voyagesms
  labels:
    chart: 'voyagesms-1.0.0'
spec:
  # Not a required attribute but ArgoCD fails sync without this field included in the YAML
  host: kcontainer-voyagesms-eda-integration.gse-eda-demos-fa9ee67c9ab6a7791435450358e564cc-0001.us-east.containers.appdomain.cloud
  path: /
  to:
    kind: Service
    name: "voyagesms-service"
    weight: 100
  port:
    targetPort: http
# Not a required attribute but ArgoCD fails sync without this field included in the YAML
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    host: kcontainer-voyagesms-eda-integration.gse-eda-demos-fa9ee67c9ab6a7791435450358e564cc-0001.us-east.containers.appdomain.cloud
    routerName: router
    wildcardPolicy: None
